first-react-project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Work+Sans:wght@300;400;600&display=swap');
+
+#root {
+    background-color: papayawhip;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Work Sans', sans-serif;
+}
+.cont-todo {
+    align-items: center;
+    flex-direction: column;
+    background: floralwhite;
+    width: 500px;
+    height: 450px;
+    border-radius: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-todo {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+.form-todo {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px 0;
+    width: 75%;
+    margin-left: 32px;
+}
+.todo-input {
+    padding: 3px 15px;
+}
+.todo-button {
+    padding: 3px 5px;
+    font-size: 15px;
+}
+select {
+    padding: 3px 0;
+    cursor: pointer;
+}
+.todo-container {
+    width: 80%;
+}
+.todo-list {
+    align-items:center;
+}
+.todo {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 3px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo li {
+    list-style-type: none;
+    background: white;
+    width: 80%;
+    padding: 2px 0;
+    border: 1px solid;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    border: 1px solid;
+    padding: 4px 6px;
+    background: silver;
+    color: white;
+    cursor: pointer;
 }
